Added getByTableId to orders and reservations